# EOII_ROS2

./: MEMORIA_TRABAJO2.txt
install/: local_setup.bash  local_setup.ps1  local_setup.sh  setup.bash  setup.sh
install/turtle_tracker/include/turtle_tracker/turtle_tracker/action/: turtle_info_action.hpp
install/turtle_tracker/include/turtle_tracker/turtle_tracker/action/detail/: turtle_info_action__builder.hpp  turtle_info_action__functions.h  turtle_info_action__rosidl_typesupport_fastrtps_c.h  turtle_info_action__rosidl_typesupport_introspection_c.h  turtle_info_action__struct.h  turtle_info_action__traits.hpp  turtle_info_action__type_support.h  turtle_info_action__type_support.hpp
install/turtle_tracker/include/turtle_tracker/turtle_tracker/msg/: rosidl_typesupport_fastrtps_cpp__visibility_control.h
install/turtle_tracker/include/turtle_tracker/turtle_tracker/srv/: turtle_info.h  turtle_info.hpp
install/turtle_tracker/include/turtle_tracker/turtle_tracker/srv/detail/: turtle_info__functions.c  turtle_info__rosidl_typesupport_fastrtps_c.h  turtle_info__rosidl_typesupport_fastrtps_cpp.hpp  turtle_info__rosidl_typesupport_introspection_c.h  turtle_info__struct.hpp
install/turtle_tracker/lib/: libturtle_tracker__rosidl_generator_c.dylib  libturtle_tracker__rosidl_generator_py.dylib  libturtle_tracker__rosidl_typesupport_c.dylib  libturtle_tracker__rosidl_typesupport_cpp.dylib  libturtle_tracker__rosidl_typesupport_fastrtps_c.dylib  libturtle_tracker__rosidl_typesupport_fastrtps_cpp.dylib  libturtle_tracker__rosidl_typesupport_introspection_c.dylib
install/turtle_tracker/lib/turtle_tracker/: explorer_follower  state_server  turtle_info_action_client  turtle_info_action_client.py  turtle_info_action_server.py  turtle_info_client  turtle_info_client.py  turtle_info_service.py  turtle_spawner.py
install/turtle_tracker/share/ament_index/resource_index/parent_prefix_path/: turtle_tracker
install/turtle_tracker/share/turtle_tracker/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/turtle_tracker/share/turtle_tracker/action/: TurtleInfoAction.idl
install/turtle_tracker/share/turtle_tracker/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  export_turtle_tracker__rosidl_generator_cppExport.cmake  export_turtle_tracker__rosidl_generator_pyExport.cmake  export_turtle_tracker__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_turtle_tracker__rosidl_typesupport_fastrtps_cExport.cmake  export_turtle_tracker__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  rosidl_cmake-extras.cmake  turtle_trackerConfig.cmake  turtle_tracker__rosidl_typesupport_cppExport-noconfig.cmake  turtle_tracker__rosidl_typesupport_introspection_cppExport-noconfig.cmake
install/turtle_tracker/share/turtle_tracker/srv/: TurtleInfo.srv  TurtleInfo_Response.msg
log/: latest_build
src/turtle_tracker/: CMakeLists.txt  README.md  package.xml  setup.py
src/turtle_tracker/install/: local_setup.sh  local_setup.zsh  setup.ps1  setup.sh  setup.zsh
src/turtle_tracker/install/turtle_tracker/share/turtle_tracker/: package.zsh
src/turtle_tracker/launch/: launch.xml  launch_with_action.xml  turtle_tracker_launch.xml
src/turtle_tracker/log/: latest_build
src/turtle_tracker/scripts/: turtle_info_action_client.py  turtle_info_action_server.py  turtle_info_client.py  turtle_info_service.py  turtle_tracker.py
src/turtle_tracker/srv/: TurtleInfo.srv
src/turtle_tracker/turtle_tracker/: __init__.py  state_server.py
